--- a/article/sg0/doc/0002.md
+++ b/article/sg0/doc/0002.md
@@ -210,4 +210,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0001) | [home](../../) | [next→](./0003) |
+| [←prev](./0001) | [menu](../) | [next→](./0003) |
