--- a/article/sg0/doc/0003.md
+++ b/article/sg0/doc/0003.md
@@ -100,4 +100,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0002) | [home](../../) | [next→](./0004) |
+| [←prev](./0002) | [menu](../) | [next→](./0004) |
