--- a/article/sg0/doc/0005.md
+++ b/article/sg0/doc/0005.md
@@ -144,4 +144,4 @@ ATF上的派对结束以后已经过了几天。
 > (to be continued)
 ---
 
-| [←prev](./0004) | [home](../../) | [next→](./0006) |
+| [←prev](./0004) | [menu](../) | [next→](./0006) |
