--- a/article/sg0/doc/0006.md
+++ b/article/sg0/doc/0006.md
@@ -92,4 +92,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0005) | [home](../../) | [next→](./0007) |
+| [←prev](./0005) | [menu](../) | [next→](./0007) |
