--- a/article/sg0/doc/0007.md
+++ b/article/sg0/doc/0007.md
@@ -165,4 +165,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0006) | [home](../../) | [next→](./0008) |
+| [←prev](./0006) | [menu](../) | [next→](./0008) |
