--- a/article/sg0/doc/0008.md
+++ b/article/sg0/doc/0008.md
@@ -225,4 +225,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0007) | [home](../../) | [next→](./0009) |
+| [←prev](./0007) | [menu](../) | [next→](./0009) |
