--- a/article/sg0/doc/0009.md
+++ b/article/sg0/doc/0009.md
@@ -49,4 +49,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0008) | [home](../../) | [next→](./0010) |
+| [←prev](./0008) | [menu](../) | [next→](./0010) |
