--- a/article/sg0/doc/0011.md
+++ b/article/sg0/doc/0011.md
@@ -249,4 +249,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0010) | [home](../../) | [next→](./0012) |
+| [←prev](./0010) | [menu](../) | [next→](./0012) |
