--- a/article/sg0/doc/0012.md
+++ b/article/sg0/doc/0012.md
@@ -204,4 +204,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0011) | [home](../../) | [next→](./0013) |
+| [←prev](./0011) | [menu](../) | [next→](./0013) |
