--- a/article/sg0/doc/0013.md
+++ b/article/sg0/doc/0013.md
@@ -92,4 +92,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0012) | [home](../../) | [next→](./0014) |
+| [←prev](./0012) | [menu](../) | [next→](./0014) |
