--- a/article/sg0/doc/0014.md
+++ b/article/sg0/doc/0014.md
@@ -126,4 +126,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0013) | [home](../../) | [next→](./0015) |
+| [←prev](./0013) | [menu](../) | [next→](./0015) |
