--- a/article/sg0/doc/0015.md
+++ b/article/sg0/doc/0015.md
@@ -179,4 +179,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0014) | [home](../../) | [next→](./0016) |
+| [←prev](./0014) | [menu](../) | [next→](./0016) |
