--- a/article/sg0/doc/0016.md
+++ b/article/sg0/doc/0016.md
@@ -173,4 +173,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0015) | [home](../../) | [next→](./0017) |
+| [←prev](./0015) | [menu](../) | [next→](./0017) |
