--- a/article/sg0/doc/0019.md
+++ b/article/sg0/doc/0019.md
@@ -155,4 +155,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0018) | [home](../../) | [next→](./0020) |
+| [←prev](./0018) | [menu](../) | [next→](./0020) |
