--- a/article/sg0/doc/0020.md
+++ b/article/sg0/doc/0020.md
@@ -131,4 +131,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0019) | [home](../../) | [next→](./0021) |
+| [←prev](./0019) | [menu](../) | [next→](./0021) |
