--- a/article/sg0/doc/0021.md
+++ b/article/sg0/doc/0021.md
@@ -147,4 +147,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0020) | [home](../../) | [next→](./0022) |
+| [←prev](./0020) | [menu](../) | [next→](./0022) |
