--- a/article/sg0/doc/0022.md
+++ b/article/sg0/doc/0022.md
@@ -190,4 +190,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0021) | [home](../../) | [next→](./0023) |
+| [←prev](./0021) | [menu](../) | [next→](./0023) |
