--- a/article/sg0/doc/0023.md
+++ b/article/sg0/doc/0023.md
@@ -275,4 +275,4 @@ My Fork？
 > (to be continued)
 ---
 
-| [←prev](./0022) | [home](../../) | [next→](./0024) |
+| [←prev](./0022) | [menu](../) | [next→](./0024) |
