--- a/article/sg0/doc/0024.md
+++ b/article/sg0/doc/0024.md
@@ -181,4 +181,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0023) | [home](../../) | [next→](./0025) |
+| [←prev](./0023) | [menu](../) | [next→](./0025) |
