--- a/article/sg0/doc/0025.md
+++ b/article/sg0/doc/0025.md
@@ -111,4 +111,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0024) | [home](../../) | [next→](./0026) |
+| [←prev](./0024) | [menu](../) | [next→](./0026) |
