--- a/article/sg0/doc/0026.md
+++ b/article/sg0/doc/0026.md
@@ -252,4 +252,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0025) | [home](../../) | [next→](./0027) |
+| [←prev](./0025) | [menu](../) | [next→](./0027) |
