--- a/article/sg0/doc/0027.md
+++ b/article/sg0/doc/0027.md
@@ -168,4 +168,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0026) | [home](../../) | [next→](./0028) |
+| [←prev](./0026) | [menu](../) | [next→](./0028) |
