--- a/article/sg0/doc/0028.md
+++ b/article/sg0/doc/0028.md
@@ -76,4 +76,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0027) | [home](../../) | [next→](./0029) |
+| [←prev](./0027) | [menu](../) | [next→](./0029) |
