--- a/article/sg0/doc/0029.md
+++ b/article/sg0/doc/0029.md
@@ -282,4 +282,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0028) | [home](../../) | [next→](./0030) |
+| [←prev](./0028) | [menu](../) | [next→](./0030) |
