--- a/article/sg0/doc/0030.md
+++ b/article/sg0/doc/0030.md
@@ -200,4 +200,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0029) | [home](../../) | [next→](./0031) |
+| [←prev](./0029) | [menu](../) | [next→](./0031) |
