--- a/article/sg0/doc/0031.md
+++ b/article/sg0/doc/0031.md
@@ -126,4 +126,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0030) | [home](../../) | [next→](./0032) |
+| [←prev](./0030) | [menu](../) | [next→](./0032) |
