--- a/article/sg0/doc/0032.md
+++ b/article/sg0/doc/0032.md
@@ -88,4 +88,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0031) | [home](../../) | [next→](./0033) |
+| [←prev](./0031) | [menu](../) | [next→](./0033) |
