--- a/article/sg0/doc/0033.md
+++ b/article/sg0/doc/0033.md
@@ -159,4 +159,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0032) | [home](../../) | [next→](./0034) |
+| [←prev](./0032) | [menu](../) | [next→](./0034) |
