--- a/article/sg0/doc/0035.md
+++ b/article/sg0/doc/0035.md
@@ -57,5 +57,5 @@
 > (to be continued)
 ---
 
-| [←prev](./0034) | [home](../../) | [next→接起电话](./0036) |  
+| [←prev](./0034) | [menu](../) | [next→接起电话](./0036) |  
 |                 |                | [next→先谈事情](./t0036-2) |
