--- a/article/sg0/doc/0036.md
+++ b/article/sg0/doc/0036.md
@@ -173,4 +173,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0035) | [home](../../) | [next→](./0037) |
+| [←prev](./0035) | [menu](../) | [next→](./0037) |
