--- a/article/sg0/doc/0037.md
+++ b/article/sg0/doc/0037.md
@@ -219,4 +219,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0036) | [home](../../) | [next→](./0038) |
+| [←prev](./0036) | [menu](../) | [next→](./0038) |
