--- a/article/sg0/doc/0038.md
+++ b/article/sg0/doc/0038.md
@@ -175,4 +175,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0037) | [home](../../) | [next→](./0039) |
+| [←prev](./0037) | [menu](../) | [next→](./0039) |
