--- a/article/sg0/doc/0039.md
+++ b/article/sg0/doc/0039.md
@@ -205,4 +205,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0038) | [home](../../) | [next→](./0040) |
+| [←prev](./0038) | [menu](../) | [next→](./0040) |
