--- a/article/sg0/doc/0040.md
+++ b/article/sg0/doc/0040.md
@@ -110,4 +110,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0039) | [home](../../) | [next→](./0041) |
+| [←prev](./0039) | [menu](../) | [next→](./0041) |
