--- a/article/sg0/doc/0041.md
+++ b/article/sg0/doc/0041.md
@@ -281,4 +281,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0040) | [home](../../) | [next→](./0042) |
+| [←prev](./0040) | [menu](../) | [next→](./0042) |
