--- a/article/sg0/doc/0042.md
+++ b/article/sg0/doc/0042.md
@@ -109,4 +109,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0041) | [home](../../) | [next→](./0043) |
+| [←prev](./0041) | [menu](../) | [next→](./0043) |
