--- a/article/sg0/doc/0044.md
+++ b/article/sg0/doc/0044.md
@@ -211,4 +211,4 @@ APP升级结束后，『Amadeus』一直启动着。
 > (to be continued)
 ---
 
-| [←prev](./0043) | [home](../../) | [next→](./0045) |
+| [←prev](./0043) | [menu](../) | [next→](./0045) |
