--- a/article/sg0/doc/0045.md
+++ b/article/sg0/doc/0045.md
@@ -207,4 +207,4 @@ NSC
 > (to be continued)
 ---
 
-| [←prev](./0044) | [home](../../) | [next→](./0046) |
+| [←prev](./0044) | [menu](../) | [next→](./0046) |
