--- a/article/sg0/doc/0046.md
+++ b/article/sg0/doc/0046.md
@@ -155,4 +155,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0045) | [home](../../) | [next→](./0047) |
+| [←prev](./0045) | [menu](../) | [next→](./0047) |
