--- a/article/sg0/doc/0047.md
+++ b/article/sg0/doc/0047.md
@@ -198,4 +198,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0046) | [home](../../) | [next→](./0048) |
+| [←prev](./0046) | [menu](../) | [next→](./0048) |
