--- a/article/sg0/doc/0048.md
+++ b/article/sg0/doc/0048.md
@@ -96,4 +96,4 @@
 > (Mission Failed. Rebooting...)
 ---
 
-| [←prev](./0047) | [home](../../) | [next→](./0049) |
+| [←prev](./0047) | [menu](../) | [next→](./0049) |
