--- a/article/sg0/doc/0050.md
+++ b/article/sg0/doc/0050.md
@@ -42,4 +42,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0017) | [home](../../) | [next→](./0051) |
+| [←prev](./0017) | [menu](../) | [next→](./0051) |
