--- a/article/sg0/doc/0051.md
+++ b/article/sg0/doc/0051.md
@@ -141,4 +141,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0050) | [home](../../) | [next→](./0052) |
+| [←prev](./0050) | [menu](../) | [next→](./0052) |
