--- a/article/sg0/doc/0052.md
+++ b/article/sg0/doc/0052.md
@@ -108,4 +108,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0051) | [home](../../) | [next→](./0053) |
+| [←prev](./0051) | [menu](../) | [next→](./0053) |
