--- a/article/sg0/doc/0053.md
+++ b/article/sg0/doc/0053.md
@@ -146,4 +146,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0052) | [home](../../) | [next→](./0054) |
+| [←prev](./0052) | [menu](../) | [next→](./0054) |
