--- a/article/sg0/doc/0055.md
+++ b/article/sg0/doc/0055.md
@@ -150,4 +150,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0054) | [home](../../) | [next→](./0056) |
+| [←prev](./0054) | [menu](../) | [next→](./0056) |
