--- a/article/sg0/doc/0056.md
+++ b/article/sg0/doc/0056.md
@@ -29,4 +29,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0055) | [home](../../) | [next→](./0057) |
+| [←prev](./0055) | [menu](../) | [next→](./0057) |
