--- a/article/sg0/doc/0057.md
+++ b/article/sg0/doc/0057.md
@@ -122,4 +122,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0056) | [home](../../) | [next→](./0058) |
+| [←prev](./0056) | [menu](../) | [next→](./0058) |
