--- a/article/sg0/doc/0058.md
+++ b/article/sg0/doc/0058.md
@@ -90,4 +90,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0057) | [home](../../) | [next→](./0059) |
+| [←prev](./0057) | [menu](../) | [next→](./0059) |
