--- a/article/sg0/doc/0059.md
+++ b/article/sg0/doc/0059.md
@@ -112,4 +112,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0058) | [home](../../) | [next→](./0060) |
+| [←prev](./0058) | [menu](../) | [next→](./0060) |
