--- a/article/sg0/doc/0060.md
+++ b/article/sg0/doc/0060.md
@@ -164,4 +164,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0059) | [home](../../) | [next→](./0061) |
+| [←prev](./0059) | [menu](../) | [next→](./0061) |
