--- a/article/sg0/doc/0061.md
+++ b/article/sg0/doc/0061.md
@@ -111,4 +111,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0060) | [home](../../) | [next→](./0062)  
+| [←prev](./0060) | [menu](../) | [next→](./0062)  
