--- a/article/sg0/doc/0062.md
+++ b/article/sg0/doc/0062.md
@@ -106,4 +106,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0061) | [home](../../) | [next→](./0063) |
+| [←prev](./0061) | [menu](../) | [next→](./0063) |
