--- a/article/sg0/doc/0063.md
+++ b/article/sg0/doc/0063.md
@@ -161,4 +161,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0062) | [home](../../) | [next→](./0064) |
+| [←prev](./0062) | [menu](../) | [next→](./0064) |
