--- a/article/sg0/doc/0064.md
+++ b/article/sg0/doc/0064.md
@@ -119,4 +119,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0063) | [home](../../) | [next→](./0065) |
+| [←prev](./0063) | [menu](../) | [next→](./0065) |
