--- a/article/sg0/doc/0065.md
+++ b/article/sg0/doc/0065.md
@@ -103,4 +103,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0064) | [home](../../) | [next→](./0066) |
+| [←prev](./0064) | [menu](../) | [next→](./0066) |
