--- a/article/sg0/doc/0066.md
+++ b/article/sg0/doc/0066.md
@@ -126,4 +126,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0065) | [home](../../) | [next→](./0067) |
+| [←prev](./0065) | [menu](../) | [next→](./0067) |
