--- a/article/sg0/doc/0067.md
+++ b/article/sg0/doc/0067.md
@@ -120,4 +120,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0066) | [home](../../) | [next→](./0068) |
+| [←prev](./0066) | [menu](../) | [next→](./0068) |
