--- a/article/sg0/doc/0068.md
+++ b/article/sg0/doc/0068.md
@@ -121,4 +121,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0067) | [home](../../) | [next→](./0069) |
+| [←prev](./0067) | [menu](../) | [next→](./0069) |
