--- a/article/sg0/doc/0069.md
+++ b/article/sg0/doc/0069.md
@@ -106,4 +106,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0068) | [home](../../) | [next→](./0070) |
+| [←prev](./0068) | [menu](../) | [next→](./0070) |
