--- a/article/sg0/doc/0070.md
+++ b/article/sg0/doc/0070.md
@@ -162,4 +162,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0069) | [home](../../) | [next→](./0071) |
+| [←prev](./0069) | [menu](../) | [next→](./0071) |
