--- a/article/sg0/doc/0071.md
+++ b/article/sg0/doc/0071.md
@@ -54,4 +54,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0070) | [home](../../) | [next→](./0072) |
+| [←prev](./0070) | [menu](../) | [next→](./0072) |
