--- a/article/sg0/doc/0072.md
+++ b/article/sg0/doc/0072.md
@@ -212,4 +212,4 @@ K6205……是什么的暗号吧？
 > (to be continued)
 ---
 
-| [←prev](./0071) | [home](../../) | [next→](./0073) |
+| [←prev](./0071) | [menu](../) | [next→](./0073) |
