--- a/article/sg0/doc/0073.md
+++ b/article/sg0/doc/0073.md
@@ -145,6 +145,6 @@
 > (to be continued)
 ---
 
-| [←prev](./0072) | [home](../) | [next→再想一下](./0074) |  
+| [←prev](./0072) | [menu](../) | [next→再想一下](./0074) |  
 |                 |             | [next→接起电话](./0094) |
 
