--- a/article/sg0/doc/0074.md
+++ b/article/sg0/doc/0074.md
@@ -1,6 +1,6 @@
 ## 存在证明的自动机械 - 00
 > 1.081163  
-> [ 2011/01/02 ] 接0073 - 再想一下。真帆的内心独白。阿马德乌斯和萨列里；红莉栖和我自己；这两组对我而言是具有特别意义的对应。  
+> [ 2011/01/02 真帆视角 ] 接0073 - 再想一下。真帆的内心独白。阿马德乌斯和萨列里；红莉栖和我自己；这两组对我而言是具有特别意义的对应。  
 
 ![](../img/0074-1.png)
 *Amadeus* 和 *Salieri*；  
@@ -28,4 +28,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0073) | [home](../../) | [next→](./0075) |
+| [←prev](./0073) | [menu](../) | [next→](./0075) |
