--- a/article/sg0/doc/0076.md
+++ b/article/sg0/doc/0076.md
@@ -110,4 +110,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0075) | [home](../../) | [next→](./0077) |
+| [←prev](./0075) | [menu](../) | [next→](./0077) |
