--- a/article/sg0/doc/0077.md
+++ b/article/sg0/doc/0077.md
@@ -118,4 +118,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0076) | [home](../../) | [next→](./0078) |
+| [←prev](./0076) | [menu](../) | [next→](./0078) |
