--- a/article/sg0/doc/0078.md
+++ b/article/sg0/doc/0078.md
@@ -308,4 +308,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0077) | [home](../../) | [next→](./0079) |
+| [←prev](./0077) | [menu](../) | [next→](./0079) |
