--- a/article/sg0/doc/0080.md
+++ b/article/sg0/doc/0080.md
@@ -122,4 +122,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0079) | [home](../../) | [next→](./0081) |
+| [←prev](./0079) | [menu](../) | [next→](./0081) |
