--- a/article/sg0/doc/0081.md
+++ b/article/sg0/doc/0081.md
@@ -186,4 +186,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0080) | [home](../../) | [next→](./0082) |
+| [←prev](./0080) | [menu](../) | [next→](./0082) |
