--- a/article/sg0/doc/0082.md
+++ b/article/sg0/doc/0082.md
@@ -109,4 +109,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0081) | [home](../../) | [next→](./0083) |
+| [←prev](./0081) | [menu](../) | [next→](./0083) |
