--- a/article/sg0/doc/0083.md
+++ b/article/sg0/doc/0083.md
@@ -126,4 +126,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0082) | [home](../../) | [next→](./0084) |
+| [←prev](./0082) | [menu](../) | [next→](./0084) |
