--- a/article/sg0/doc/0084.md
+++ b/article/sg0/doc/0084.md
@@ -113,4 +113,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0083) | [home](../../) | [next→](./0085) |
+| [←prev](./0083) | [menu](../) | [next→](./0085) |
