--- a/article/sg0/doc/0085.md
+++ b/article/sg0/doc/0085.md
@@ -77,4 +77,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0084) | [home](../../) | [next→](./0086) |
+| [←prev](./0084) | [menu](../) | [next→](./0086) |
