--- a/article/sg0/doc/0086.md
+++ b/article/sg0/doc/0086.md
@@ -120,4 +120,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0085) | [home](../../) | [next→](./0087) |
+| [←prev](./0085) | [menu](../) | [next→](./0087) |
