--- a/article/sg0/doc/0087.md
+++ b/article/sg0/doc/0087.md
@@ -128,4 +128,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0086) | [home](../../) | [next→](./0088) |
+| [←prev](./0086) | [menu](../) | [next→](./0088) |
