--- a/article/sg0/doc/0088.md
+++ b/article/sg0/doc/0088.md
@@ -115,4 +115,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0087) | [home](../../) | [next→](./0089) |
+| [←prev](./0087) | [menu](../) | [next→](./0089) |
