--- a/article/sg0/doc/0089.md
+++ b/article/sg0/doc/0089.md
@@ -129,4 +129,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0088) | [home](../../) | [next→](./0090) |
+| [←prev](./0088) | [menu](../) | [next→](./0090) |
