--- a/article/sg0/doc/0090.md
+++ b/article/sg0/doc/0090.md
@@ -114,4 +114,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0089) | [home](../../) | [next→](./0091) |
+| [←prev](./0089) | [menu](../) | [next→](./0091) |
