--- a/article/sg0/doc/0093.md
+++ b/article/sg0/doc/0093.md
@@ -32,4 +32,4 @@
 > Hope is always there in the “future”.
 ---
 
-| [←prev](./0092) | [home](../../) | [next→](./0094) |
+| [←prev](./0092) | [menu](../) | [next→](./0094) |
