--- a/article/sg0/doc/0001.md
+++ b/article/sg0/doc/0001.md
@@ -116,4 +116,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0000) | [home](../../) | [next→](./0002) |
+| [←prev](./0000) | [menu](../) | [next→](./0002) |
