--- a/article/sg0/doc/0004.md
+++ b/article/sg0/doc/0004.md
@@ -164,4 +164,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0003) | [home](../../) | [next→](./0005) |
+| [←prev](./0003) | [menu](../) | [next→](./0005) |
