--- a/article/sg0/doc/0010.md
+++ b/article/sg0/doc/0010.md
@@ -160,4 +160,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0009) | [home](../../) | [next→](./0011) |
+| [←prev](./0009) | [menu](../) | [next→](./0011) |
