--- a/article/sg0/doc/0017.md
+++ b/article/sg0/doc/0017.md
@@ -185,5 +185,5 @@
 > (to be continued)
 ---
 
-| [←prev](./0016) | [home](../../) | [next→不关机](./0018) |  
+| [←prev](./0016) | [menu](../) | [next→不关机](./0018) |  
 |                 |                | [next→关机  ](./0050) |
