--- a/article/sg0/doc/0018.md
+++ b/article/sg0/doc/0018.md
@@ -51,4 +51,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0017) | [home](../../) | [next→](./0019) |
+| [←prev](./0017) | [menu](../) | [next→](./0019) |
