--- a/article/sg0/doc/0034.md
+++ b/article/sg0/doc/0034.md
@@ -147,4 +147,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0033) | [home](../../) | [next→](./0035) |
+| [←prev](./0033) | [menu](../) | [next→](./0035) |
