--- a/article/sg0/doc/0049.md
+++ b/article/sg0/doc/0049.md
@@ -33,4 +33,4 @@
 > Hope is always there in the “future”.
 ---
 
-| [←prev](./0048) | [home](../../) | [next→](./0050) |
+| [←prev](./0048) | [menu](../) | [next→](./0050) |
