--- a/article/sg0/doc/0054.md
+++ b/article/sg0/doc/0054.md
@@ -144,4 +144,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0053) | [home](../../) | [next→](./0055) |
+| [←prev](./0053) | [menu](../) | [next→](./0055) |
