--- a/article/sg0/doc/0075.md
+++ b/article/sg0/doc/0075.md
@@ -124,4 +124,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0074) | [home](../../) | [next→](./0076) |
+| [←prev](./0074) | [menu](../) | [next→](./0076) |
