--- a/article/sg0/doc/0079.md
+++ b/article/sg0/doc/0079.md
@@ -124,4 +124,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0078) | [home](../../) | [next→](./0080) |
+| [←prev](./0078) | [menu](../) | [next→](./0080) |
