人名修改： 真由氏 --> 真由喜

--- a/article/sg0/doc/0000.md
+++ b/article/sg0/doc/0000.md
@@ -111,7 +111,7 @@
 真由理：“冈伦？冈伦……呐，冈伦……  
  已经，不用拼命了哦。  
  就算哭出来也可以哟，冈伦。  
- 真由氏会一直在你身边的，冈伦。”  
+ 真由喜会一直在你身边的，冈伦。”  
 
 “……（啜泣）”    
 不知是不是因为真由理的话，  
