--- a/article/sg0/doc/0002.md
+++ b/article/sg0/doc/0002.md
@@ -8,7 +8,7 @@
 「啊啊，没问题」  
 『是吗？真好呢~  
  很期待是怎样的研讨会呢  
- 真由氏也想看看啊~』  
+ 真由喜也想看看啊~』  
 「对你来说可能太难了」  
 『![](../img/emoji/mayuri-wuyu.png)  
  说的也是呢~那么，就不打扰你啦，再见~~』  
