--- a/article/sg0/doc/0013.md
+++ b/article/sg0/doc/0013.md
@@ -49,7 +49,7 @@
 “但是爸爸你们……”  
 “我们几个不要紧！快点去吧铃羽！”  
 “怎么可以！”
-“真由氏！快把篝酱——！”  
+“真由喜！快把篝酱——！”  
 “诶？”  
 “这台机器，还可以再乘上一个人！”  
 桶子和真由理将还在发呆的篝抱住放进了时间机器中。  
