--- a/article/sg0/doc/0022.md
+++ b/article/sg0/doc/0022.md
@@ -31,7 +31,7 @@
 真由理走进厨房，给上面放着炖锅的煤气灶点火。噗噗作响的滚水声和香味，充满了LAB。真由理用一边用勺子搅拌一边尝味道，向铃羽笑了。  
 “喔~大成功呢~”  
 “真由姐做的吗？”  
-“嗯~托由季的福，真由氏的厨艺在突飞猛进的哦！”  
+“嗯~托由季的福，真由喜的厨艺在突飞猛进的哦！”  
 “爸……哥哥呢？”  
 “去 *MayQueen* 了哦~据说那之后有打工。”  
 “这样啊……”  
@@ -66,7 +66,7 @@
 “是萌呢，萌~”  
 “讨、讨厌啊！”  
 对于两人的调笑铃羽无法再还口，只得扭向了一边。  
-“那么，真由氏马上得去打工了~”  
+“那么，真由喜马上得去打工了~”  
 “不吃炖菜吗？”  
 “打完工回来的时候准备顺道再来这边一趟。想那个时候吃~”  
 “那我做点沙拉什么的放着，和那一起吃吧。”  
