--- a/article/sg0/doc/0023.md
+++ b/article/sg0/doc/0023.md
@@ -6,9 +6,9 @@
 一进入女仆咖啡店 *MayQueen+Nyan²* ，就听到了工作中的猫耳女仆们朝气蓬勃的欢迎。因为是工作日的傍晚，即使是这样的高人气店，也能看到空位。也因此菲莉丝有空亲自来接待我。  
 “欢迎回来喵~凶真——不对，冈伦~”  
 “啊。那个，今天，真由理呢？”  
-“真由氏的话，马上就来了喵。还有大概30分钟。”  
+“真由喜的话，马上就来了喵。还有大概30分钟。”  
 “这样啊。”  
-真由理从以前开始就在这家店里打工。作为女仆的名字是叫真由氏·喵喵。  
+真由理从以前开始就在这家店里打工。作为女仆的名字是叫真由喜·喵喵。  
 顺便一提，做女仆的时候戴着金色的长发和猫耳，和平时给人的笨笨的印象差别很大。  
 “我是被桶子喊来的。他已经来了吗？”  
 “嗯，在老位置那里。”  
@@ -95,19 +95,19 @@
 “嗯。实际上，有两件事——”  
 桶子在这里中断了话语，四下张望了起来。  
 店内的客人还比较少，而且多亏菲莉丝的安排，近处的座位都没有人。只要不发出特别大的声音的话，基本是不用担心被偷听的——啊，一不小心又冒出了以前中二病时期坏习惯。大概是因为之前被卷入如同好莱坞电影一样的非日常事件当中的原因吧。  
-“首先第一项，希望你能对真由氏保密……其实有个需要找到的人。”  
+“首先第一项，希望你能对真由喜保密……其实有个需要找到的人。”  
 “对真由理保密？”  
 “嗯。”  
 “为啥？”  
 “啊，有些内情……”  
 像是牙齿里面被塞了什么东西一样的说法。  
-“冈伦你……是真由氏的青梅竹马吧？  
- 在真由氏的朋友或者熟人当中，名字叫‘篝’的孩子，你知道吗？”  
+“冈伦你……是真由喜的青梅竹马吧？  
+ 在真由喜的朋友或者熟人当中，名字叫‘篝’的孩子，你知道吗？”  
 “篝？”  
 完全没有听过的名字。
 当然，真由理的社交关系什么的我也不是全部都知道……  
 “在我知道的范围里面……没有。”  
-“那，先把名字放在一边，和真由氏关系特别好的女性朋友都有哪些呢？”  
+“那，先把名字放在一边，和真由喜关系特别好的女性朋友都有哪些呢？”  
 “嗯，这样的话……应该是有一个从小学到中学一直都在一起玩的社团里的人来着——”  
 把那个名字告诉了桶子。高中以后的，就不用再特意说了，我知道的桶子应该也是清楚的。关系特别好的，就是cosplay社团的吹雪、枫还有由季，还有就是，和菲莉丝一起的 *MayQueen+Nyan²* 的女孩子们。再有的话，虽然不是女孩子，但是琉华应该也能算是关系比较亲密的朋友了吧。  
 “——我能够回答出来的就是这种程度了。和你知道的内容是差不多的。抱歉啊。”  
@@ -126,7 +126,7 @@
 “嗯。”  
 “真由理的亲戚还是什么？”  
 “不是那样……不，也不能说完全不是那样……  
- 听说是真由氏的‘女儿’啊。”  
+ 听说是真由喜的‘女儿’啊。”  
 “啊啊……原来如此，nüer呢……”  
 桶子用很正常的语气说了出来，让我一下子没反应过来。  
 nüer么……nüer是什么词来着？  
@@ -150,7 +150,7 @@ nüer……nǚér……女儿？
 “就是说，为了完成本来的任务，于是一口气跳跃到了2010年，这么回事吗？”  
 桶子点了点头。  
 “但是，铃羽虽然到了‘现在’，还是没有放弃一直在找的样子。  
- 所以说，能不能装作随便的样子去问问真由氏？”  
+ 所以说，能不能装作随便的样子去问问真由喜？”  
 “我去问？”  
 “大约在十年前，有没有遇到过和自己差不多大岁数的孩子之类的……”  
 “啊啊，知道了。我去问问看。”  
