--- a/article/sg0/doc/0024.md
+++ b/article/sg0/doc/0024.md
@@ -26,7 +26,7 @@
 由季：“啊啦，真可惜，明明这么合身的。”  
 “真是热闹啊……”  
 “诶嘿嘿~现在正在绝赞准备中~”  
-吹雪：“真由氏她啊，现在穿着超级迷你裙版的圣诞服，非常非常可爱的哟~  
+吹雪：“真由喜她啊，现在穿着超级迷你裙版的圣诞服，非常非常可爱的哟~  
  顺便一提，胖次的颜色是粉色da☆ze！”  
 “呜哇！吹雪酱你在说些什么啊！！”  
 “哦……”  
