--- a/article/sg0/doc/0026.md
+++ b/article/sg0/doc/0026.md
@@ -55,9 +55,9 @@
 小动物本来以为找到了年龄相仿的玩伴却实际上踩了地雷，真帆则是一脸苦笑。凑在一起的两小只还不知道已经引起了两位“危险人物”的窃窃私语。  
 “真由理酱，你怎么看？”  
 先发言的是由季。  
-“两个人都是好材料啊~真由氏的妄想已经停不住了！  
+“两个人都是好材料啊~真由喜的妄想已经停不住了！  
  连同绹酱的份在内，多准备些小号的就好了呢~  
- 这是真由氏一生的失误啊！”  
+ 这是真由喜一生的失误啊！”  
 “小小圣诞老人组合……啊啊~好想看啊~”  
 “是啊！”  
 被真由理盯上了啊……看来比屋定是逃不掉了，毕竟连那么害羞的琉华子都被缠得投降了。两人的密谋仍在继续。  
@@ -72,7 +72,7 @@
 “不过最近，便利店一类的地方，店员们也都穿成圣诞老人了哦。  
  CM和圣诞节，性质完全不同呢。”  
 说这些结果还是想让比屋定他们穿圣诞装吧……  
-“所以说~真帆小姐！不介意的话把真由氏的圣诞装借给你吧？”  
+“所以说~真帆小姐！不介意的话把真由喜的圣诞装借给你吧？”  
 真由理一副天真无邪的样子向比屋定发动突击，遭到了全力拒绝。倒是雷斯吉宁教授很有兴致地自己找了个纸质三角帽戴在头上。  
 “啊，桶子君来联络了~说是马上到了，铃小姐也在一起。”  
 真由理看着手机说道。看来桶子那边很顺利，不愧是铃羽的父亲。这样最大目标就达成了，接下来就要开始下个任务。事先大家一起决定了要给铃羽一个惊喜，即将回到这里的铃羽并不知道我们在等着她。我们每人配了一个拉炮移动到各自的位置，顺势也叫了雷斯吉宁教授和比屋定一起帮忙。真帆还是有些困惑，教授很则是兴致勃勃。  
@@ -122,8 +122,8 @@
 铃羽：“爸……哥哥也是提前知道的？”  
 桶子：“唔……嗯。”  
 铃羽：“这样啊，难怪今天表现的有点奇怪。”  
-真由理：“抱歉，铃小姐。提出计划的是真由氏的哟。  
- 所以不要生由季和桶子君的气，要生就生真由氏的气吧！”  
+真由理：“抱歉，铃小姐。提出计划的是真由喜的哟。  
+ 所以不要生由季和桶子君的气，要生就生真由喜的气吧！”  
 铃羽：“真由姐姐真是的，我平常有一直在生气吗？”  
 铃羽再次环视室内。  
 铃羽：“诶~好厉害啊，真不敢相信这是平时的那个LAB呢。”  
@@ -169,7 +169,7 @@
 “嗯……”  
 
 “大家喵~喝的东西都准备好了喵？  
- 那么，先请策划这次派对的真由氏来说点什么喵~”  
+ 那么，先请策划这次派对的真由喜来说点什么喵~”  
 “诶，诶~？”  
 突然被甩到话题的真由理，慌慌张张的站了起来。过程中碰到了坐在旁边的琉华子，两人手中杯子里的东西差点溅出来了。  
 “哇，哇啊？琉华君，抱歉呢！”  
@@ -177,12 +177,12 @@
 “呼嗯……”  
 真由理就这样，呼——哈的深呼吸着调整气息。  
 “嗯——今天是平安夜！  
- 现在到处是现充，今年真由氏跟大家也开起了派对，成为现充吧！”  
-“啊，不是……我想那个现充的意思弄错了啊，真由氏……”  
+ 现在到处是现充，今年真由喜跟大家也开起了派对，成为现充吧！”  
+“啊，不是……我想那个现充的意思弄错了啊，真由喜……”  
 吹雪看了看远方，嘴里嘟哝着。而枫见机补充道：  
 “吹雪酱，从好几位后辈酱那里接到了圣诞节约会的邀请呢！而且是很热烈的那种！”  
 “虽然，全部都是女孩子的后辈呢。”  
-“这个，那个……总而言之，大家能过得很开心的话，真由氏就很高兴啦~说完啦~”  
+“这个，那个……总而言之，大家能过得很开心的话，真由喜就很高兴啦~说完啦~”  
 真由理微微鞠躬低头，对铃羽微笑了一下。铃羽则用不知该笑还是如何的暧昧表情回应着。  
 “那么，就来干杯喵~真帆喵，领头就拜托了喵~”  
 “诶？我，我来！？”  
@@ -221,7 +221,7 @@
 “铃羽小姐，我也来——”  
 “啊，嗯。”  
 铃羽那边表情还很僵硬，真由理跟由季，还有桶子稍微有些强硬的跟她一起碰杯了。  
-“给，铃小姐。这个，是真由氏自己做的哟！”  
+“给，铃小姐。这个，是真由喜自己做的哟！”  
 真由理把法式咸饼盛好递给了铃羽。铃羽尝了一口，表情顿时闪亮了起来。  
 “好吃！”  
 “真的吗？！”  
