--- a/article/sg0/doc/0027.md
+++ b/article/sg0/doc/0027.md
@@ -8,8 +8,8 @@
 比屋定和教授从和光市到这里来的途中，在堂吉诃德那花了大概10分钟左右选了礼物。  
 “没事的，这样就很好了喵！”  
 “我……什么都没带……”  
-“铃羽那份的话，我跟真由氏已经准备好了。”  
-“真由氏选的~”  
+“铃羽那份的话，我跟真由喜已经准备好了。”  
+“真由喜选的~”  
 “这样啊……不好意思。”  
 “不用在意也可以DaZe！”  
 “也可以Da☆Ze~”  
@@ -18,14 +18,14 @@
 菲莉丝将所有人的礼物集中到了一起，然后把它们都贴上了带编号的小标签。  
 “喵~喵喵~~♪”  
 一捆一次性筷子随着声音被高举起来。  
-“这个是~真由氏在今晚准备用来国王游戏的东西喵！”  
+“这个是~真由喜在今晚准备用来国王游戏的东西喵！”  
 “哇！不要说出来啊，菲莉丝酱！”  
 “喂，真由理……国王游戏那种东西，是联谊的时候才玩的啊……”  
 “我知道的啦~只是稍微搞错了而已……”  
 “嘛，被女孩子命令什么的，我这边是最喜欢的了！”  
 “桥田先生真是个HENTAI呢。”  
 除了吹雪棒读一般的吐槽，其他人自动过滤了桶子的变态发言。  
-“于是，被真由氏稍微搞错了的这些一次性筷子，就决定拿来抽签用了喵！  
+“于是，被真由喜稍微搞错了的这些一次性筷子，就决定拿来抽签用了喵！  
  抽中哪个编号，就可以拿到对应的礼物喵！”  
 菲莉丝将筷子弄混之后，分别走到每个人那里让大家抽签。  
 真由理的作战，菲莉丝也参与其中。事实上，真由理跟菲莉丝之间明显在用眼神和小动作在互相传递着信息。在大家还被蒙在鼓里地进行着抽签的时候，由季和桶子的礼物已经被单独拿了出来进行了标签交换的工作。搞得那么明显，我都担心会不会被由季发现。  
@@ -44,14 +44,14 @@
 “这，难道是……”  
 正在我怀疑的时候，准备这份礼物的元凶——吹雪凑了过来：  
 “嗯？啊啊，到冈伦那里去了啊！  
- 就这样当作礼物送给真由氏也可以哟~”  
+ 就这样当作礼物送给真由喜也可以哟~”  
 “怎么办得到那种事！”  
 “为了冈伦的话，她肯定会很开心的穿起来的！”  
 “为什么会变成这种话题……”  
-“什么什么？真由氏怎么了？”  
+“什么什么？真由喜怎么了？”  
 听到自己的名字，真由理表现出兴趣。  
 “诶？这个是……什么呢？”  
-“情趣睡衣哟，真由氏~而且是超级可爱性感的款式~为了冈伦穿起来吧？”  
+“情趣睡衣哟，真由喜~而且是超级可爱性感的款式~为了冈伦穿起来吧？”  
 “唔诶诶诶~？”  
 “这怎么能行啊……”  
 “那么，冈伦先生自己穿的话……也是可以的哟？”  
@@ -64,7 +64,7 @@
 这次是枫。  
 “唔诶诶~？”  
 “你们难道就只有这样的想法吗……”  
-“真，真由氏的话，已经拿到了冈伦的礼物了，所以不用了！”  
+“真，真由喜的话，已经拿到了冈伦的礼物了，所以不用了！”  
 或许是因为青梅竹马的缘分，抽到我的礼物的是真由理。顺带一提，我准备的是，金块形状的巨大的巧克力。就是在堂吉诃德的聚会商品专柜卖的那种。但是貌似吹雪和枫正一脸鄙视地看着我的礼物和我本人。  
 “冈伦先生啊……你就没有，什么其他的选择么？”  
 “真烦啊！聚会上这种东西会受欢迎——这是杂志上写的。”  
@@ -72,8 +72,8 @@
 “没有呢……”  
 “什么……”  
 没有，吗……明明写着选这个肯定没错的……  
-“真由氏很开心哟~因为，是金块哟？这种东西一辈子都摸不到的哟！”  
-“唔唔……好孩子啊，真由氏~”  
+“真由喜很开心哟~因为，是金块哟？这种东西一辈子都摸不到的哟！”  
+“唔唔……好孩子啊，真由喜~”  
 “真是个好孩子呢……我摸我摸~”  
 吹雪和枫稍微带着点同情意味，但是又很怜爱地摸着真由理的脑袋。  
 总觉得……像是我这边的错呢……  
@@ -100,7 +100,7 @@
 铃羽：“嗯~？挺能干的嘛，哥哥。”  
 除了事前就知道里面东西的菲莉丝和真由理以外，所有人都发出了惊讶的声音。  
 “这是，桥田先生的呢。”  
-“怎，怎么样啊？虽然是我听了真由氏的建议选的……”  
+“怎，怎么样啊？虽然是我听了真由喜的建议选的……”  
 “好棒……多谢了！我会很爱惜的！”  
 由季把八音盒抱在胸前，看来是打心底里感到喜悦。  
 “啊……？”  
@@ -123,7 +123,7 @@
 “这，这样啊……”  
 这时，由季从洗手间回来了，步伐相当不稳。虽然回到了座位上，还是冷静不下来扭扭捏捏的，吃着桌上的点心，偶尔瞟一瞟桶子那边。目前看来，电影票作战似乎进行得不错。太过关注的话，计划可能会暴露，所以现在尽量装作不知道会比较好。  
 
-“啊！真由氏准备的八音盒，到了真帆小姐那里了呢~”  
+“啊！真由喜准备的八音盒，到了真帆小姐那里了呢~”  
 看见比屋定手里的八音盒，真由理兴奋地说着。八音盒整体设计成熊的形状，上好背后的发条后手脚和嘴巴会一动一动的发出声音。与刚才由季抽到的款式完全不同。  
 “我真的可以收下这么棒的礼物吗？”  
 “没问题的哟~请吧请吧~”  
@@ -132,7 +132,7 @@
 于是比屋定咯吱咯吱地扭动发条，枫很细心地把热闹的BGM关掉了。  
 “好了……”  
 真帆放开发条的同时，八音盒独有的，虽然是金属质感却很温柔的音色播放了出来。喧闹的气氛慢慢变得舒缓起来，LAB里开始充满惬意的放松感。八音盒的音符悄然地在我们耳边流动，让人陶醉其中。  
-“真由氏呢，最喜欢这首曲子了~”  
+“真由喜呢，最喜欢这首曲子了~”  
 琉华子：“我也是。”  
 绹：“感觉心里变得暖呼呼的呢！”  
 真帆：“嗯，是呢。”  
