--- a/article/sg0/doc/0041.md
+++ b/article/sg0/doc/0041.md
@@ -19,7 +19,7 @@
 “但是听说在那之后，打算给你准备新的电影票，也被你拒绝了吧？”  
 “等、听谁说的？”  
 “当然是真由姐和留未姐咯。”  
-“这、这个，那个哦，依靠真由氏和菲莉丝碳的话，太没有男子气概了吧。
+“这、这个，那个哦，依靠真由喜和菲莉丝碳的话，太没有男子气概了吧。
 <abbr title="作认真状">*Kiri！*</abbr>”  
 “所以呢？你自己有采取什么行动了吗？”  
 “……”  
@@ -68,7 +68,7 @@
 以前也看见过吗？但是完全想不起来是什么时候在哪里见到的。虽然如此，但铃羽的本能敲响了警钟。这个钥匙圈一定是有着什么重大的意义的。  
 乌帕本身是随处可见的东西。本体的塑料部分呈圆形，涂装本来应该是更鲜艳的颜色，但是已经严重褪色，并且遍布各类撞击的痕迹。不过，完全没有粘到灰和脏东西，不如说被擦得闪闪发亮，想必它的主人一定很珍惜吧。挂环的地方因为长年累月的老化，有个部分明显断裂了。想必这就是它掉落的原因了。  
 “到底是哪里呢……我记得在哪里见过……”  
-“让真由氏看看怎么样？”  
+“让真由喜看看怎么样？”  
 “也是呢……”  
 铃羽目不转睛地盯着桶子里的乌帕——突然，铃羽的脑内灵光一闪，回响起了一位少女的叫喊声。  
 
@@ -81,7 +81,7 @@
 铃羽不禁倒吸一口气，后背激起一阵难以名状的战栗。  
 “莫、莫非……这个是……篝的……吗？”  
 是那个时候——2036年8月13日，铃羽乘坐时间机器的那天。就是那时看到了这个乌帕。虽然比那天看到的旧了很多，记忆也有一些模糊了，不过没有错，这个就是未来的真由理交给篝的。幼小的篝在时间机器里看着它流泪的样子，铃羽也目睹了无数次。  
-“你说的篝……难道是未来的真由氏的女儿？”  
+“你说的篝……难道是未来的真由喜的女儿？”  
 “……嗯，”  
 “找到她了？”  
 “还没，不过对方好像知道咱们这里。”  
@@ -101,7 +101,7 @@
 “嗯、嗯。知道了哦。”  
 “就算和冈伦叔叔、妈妈、或者真由姐在一起，也绝对不能把门开着哦。  
  最好把门链也拴上，算是心理安慰也好。”  
-“但是啊，冈伦和真由氏他们俩姑且不论，和阿万音氏两人相处的时候这么做，  
+“但是啊，冈伦和真由喜他们俩姑且不论，和阿万音氏两人相处的时候这么做，  
  会不会产生别的奇怪的意思呢？阿万音氏不会误解什么吧？”  
 “啊……那个确实。”  
 “如果因此被讨厌了，就是咱们家的大危机了哦。”  
@@ -111,7 +111,7 @@
 “诶，结果还是绕回那个话题了吗！？”  
 “总之还是需要多加注意啊。”  
 桶子把绿色的乌帕钥匙圈递给了铃羽。铃羽接过后一边注视着，一边试着用指尖触碰它。  
-“呐——铃羽，篝碳虽然和真由氏没有血缘关系，但是她的女儿吧？”  
+“呐——铃羽，篝碳虽然和真由喜没有血缘关系，但是她的女儿吧？”  
 “是啊。”  
 “那样的真由理抚养出的孩子，会变成袭击别人的恐怖的人吗……？”  
 “……”  
