--- a/article/sg0/doc/0061.md
+++ b/article/sg0/doc/0061.md
@@ -3,7 +3,7 @@
 > [ 2010/12/23 ] 圣诞节不办派对了，改为新年派对。琉华子带陌生失忆女性来LAB找冈伦求助，女性长得非常像红莉栖。  
 
 从桐生萌郁那里听到关于椎名篝的报告之后，又过了几天。昨晚确认了一下，据说那之后的调查就没有新进展了。桐生萌郁也有杂志社的校对工作，没有太多时间吧。虽然对寻找椎名篝的家伙感到不安，但也不能让她把原来的业务放下，优先忙这边的事情吧。  
-“哈呜~真由氏非常伤心……”  
+“哈呜~真由喜非常伤心……”  
 “嗯？难道是圣诞节派对的事情吗？”  
 “嗯。枫和吹雪酱，有事情了不能来了。  
  菲莉丝酱也要忙着工作，绹酱也要和店长一起过~  
@@ -29,7 +29,7 @@
 “……啊，挺好的嘛。”  
 “对吧对吧~嗯，之后要问问大家呢~”  
 真由理那么说着，缓缓的站了起来。
-“那么，真由氏接下来要去买东西了~”  
+“那么，真由喜接下来要去买东西了~”  
 “买东西？”  
 “嗯。吹雪酱的cos服，突然需要一个小物件。”  
 “这样啊，路上小心哦。”  
