--- a/article/sg0/doc/0062.md
+++ b/article/sg0/doc/0062.md
@@ -54,7 +54,7 @@
 
 ![](../img/0062-1.png)
 
-“你喜欢乌帕吗？真由氏也是，最~喜欢乌帕了~~”  
+“你喜欢乌帕吗？真由喜也是，最~喜欢乌帕了~~”  
 “…… ”  
 “难道，这就是线索吗？”  
 老旧的乌帕钥匙圈，这样的东西能当作线索吗？  
@@ -62,7 +62,7 @@
 这么一说确实如此……乌帕是《雷NET翔》这部动画的吉祥物，其商品问世，也只是数年前的事。但是眼前的乌帕，看起来已经有相当的年份了。  
 “这个，原来不是绿色的嘛？因为这个是‘森之妖精先生’版本的嘛~”  
 “森之妖精先生？”  
-“嗯~之前放映的电影里出现过。看~真由氏也有这个~但这里的设计有点不一样。”  
+“嗯~之前放映的电影里出现过。看~真由喜也有这个~但这里的设计有点不一样。”  
 即使她用手指着，我也完全不清楚哪里不一样。  
 “这个钥匙圈啊，一直买不到，所以一~直在找它呢。  
  然后不久之前，琉华君发现后买给我了~呐？”  
