--- a/article/sg0/doc/0068.md
+++ b/article/sg0/doc/0068.md
@@ -6,10 +6,10 @@
 “久等了喵！”  
 “呼。穿着那衣服肩膀好酸呢。”  
 菲莉丝和铃羽换回了平常的穿着，我们也终于感觉回到了日常。  
-吹雪：“啊咧？真由氏她们呢？”  
+吹雪：“啊咧？真由喜她们呢？”  
 “还没换完衣服，说是稍微等一下喵。”  
 真由理和琉华子还没有出来。  
-“我说我说，冈伦，说到换衣服，难道真由氏和琉华氏是在同一地方一起换衣服？”  
+“我说我说，冈伦，说到换衣服，难道真由喜和琉华氏是在同一地方一起换衣服？”  
 “不，真这样的话很糟糕的吧……”  
 “‘呀，琉华君~，帮我把背上的拉链拉开~’  
  ‘这、这怎么可以……我怎么能做这样的事……’  
