--- a/article/sg0/doc/0073.md
+++ b/article/sg0/doc/0073.md
@@ -75,7 +75,7 @@
 “那个，还有什么需要我帮忙的吗。  
  明明现在篝的情况那么严重，我却什么也办不到……  
  就连冈部先生的忙也帮不上，那样真的……”  
-“真由氏也想为了篝做些什么呐……”  
+“真由喜也想为了篝做些什么呐……”  
 “但是……有我们能办到的事吗？”  
 “那个……”  
 琉华子和真由理都表示想要帮忙，吹雪实在的发言却让所有人都沉默了。即使大家都遭遇了这般危险，还是真心想要出一份力。话虽如此，我不能再让他们遭遇这种情况了。  
