--- a/article/sg0/doc/0076.md
+++ b/article/sg0/doc/0076.md
@@ -54,7 +54,7 @@
 “但是，这下头疼了呢……是啊，说不定是盯上了控制代码呢……”  
  又不能立刻离开日本，也不想在遭遇袭击呢……  
  话是这么说，又能怎么办呢……”  
-“在平静下来之前可以待在LAB哟~或者，要来真由氏的家里吗？”  
+“在平静下来之前可以待在LAB哟~或者，要来真由喜的家里吗？”  
 “谢谢，真由理小姐。但实在不好意思受到如此关照。”  
 虽然已经变成了不存在的事情了，篝遇袭的事件还是在我脑中浮现。LAB也好，真由理的家也好，都不能算作是安全的地方。  
 
