--- a/article/sg0/doc/0082.md
+++ b/article/sg0/doc/0082.md
@@ -21,7 +21,7 @@
  菲莉丝今天一整天都没办法离开店里，所以只能拜托冈伦喵！  
  ![](../img/emoji/bear-ooohyeah.png)  
  总之去了就知道了喵！  
- 对了，去的时候希望也叫上真由氏喵！拜托了喵！  
+ 对了，去的时候希望也叫上真由喜喵！拜托了喵！  
  ![](../img/emoji/moeka-thanks.png)（x2）』  
 总之，菲莉丝家里好像发生了什么麻烦的事情，所以来向我求助。  
 “比屋定她们发生什么事了吗……？昨天和菲莉丝谈话的时候，看起来倒是和平时没什么不同。”  
@@ -87,8 +87,8 @@
 
 “但是菲莉丝为什么会来向我求助呢？  
  还有，为什么要求带真由理一起来也是个谜。”  
-“诶嘿嘿~关于这一点，真由氏已经想到了理由了！  
- 菲莉丝酱一定是想要收拾这个房间呢~所以才把真由氏叫来了呢。  
+“诶嘿嘿~关于这一点，真由喜已经想到了理由了！  
+ 菲莉丝酱一定是想要收拾这个房间呢~所以才把真由喜叫来了呢。  
  只有冈伦一个人来的话，肯定会放弃吧？”  
 “呃……”  
 确实，可能会的。眼前这座拔地而起的新“建筑”，根本不像是靠“收拾”能搞定的。我一个人的话，也许就转身逃回去了。因为就算是找专门的从业者来，打扫一遍也要花一整天吧。何况拿不到工资，完全不划算。即使想发牢骚，但拜托菲莉丝将比屋定安置在这个房间的，就是我自己。硬着头皮干吧。  
@@ -96,7 +96,7 @@
 “是吗？虽然不是很能接受……算了，了解。”  
 “……知道了……”  
 “我尽量找些熟人过来帮忙，该找谁呢……”  
-“对了~真由氏又想到了呢！找清扫军曹来帮忙怎么样？”  
+“对了~真由喜又想到了呢！找清扫军曹来帮忙怎么样？”  
 “清扫军曹？那是什么？”  
 “清扫军曹啊，对打扫很有心得呢！房间越乱就越有干劲！”  
 “你的熟人吗？”  
