--- a/article/sg0/doc/0083.md
+++ b/article/sg0/doc/0083.md
@@ -22,7 +22,7 @@
 “对不起呢。但是，我们真的很需要清扫军曹的力量呢~”  
 “人、人家才不是什么军曹呢~！只不过是在打扫的时候，特别有干劲而已啦~！真的哟！”  
 绹拼命解释着，好像要哭出来了。也是，这个年纪的小女孩，被叫军曹大概很不情愿吧……  
-“呐，绹酱，怎么样呢~？可以来帮真由氏和朋友们吗？”  
+“呐，绹酱，怎么样呢~？可以来帮真由喜和朋友们吗？”  
 “嗯……不要再叫人家军曹了哦？”  
 “嗯，不叫！”  
 “那么，好哒！我要去打扫！而且也想去猫咪姐姐家里看看！  
