--- a/article/sg0/doc/0085.md
+++ b/article/sg0/doc/0085.md
@@ -13,7 +13,7 @@
 “呐~”  
 由于时间也很晚了，配合绹的回家时间，大扫除后的派对就此散会了。我和真由理借助了清扫军曹的力量，也有责任将其送回显像管工房。比屋定也意外地想要一起出来散个步。  
 “那下一个，就到前面的那家店吧！”  
-“好——真由氏这回不会再输啦~预备——开始！”  
+“好——真由喜这回不会再输啦~预备——开始！”  
 “唉，真是的……”  
 绹看起来比平时更加情绪高涨呢。是努力完成了清扫军曹的工作，得到了赞扬的原因吧。  
 “呵呵。”  
