--- a/article/sg0/doc/0096.md
+++ b/article/sg0/doc/0096.md
@@ -17,7 +17,7 @@
 “啊哈哈，冈伦先生这样不行的哦~不好好吃饭可不行，不然就没办法长得像桶子叔叔那么大了哦~”  
 “变成那样的话，少吃一顿反而更好呢。”  
 嗯？潜意识感觉好像有哪里不太对。  
-“那么，真由氏就做点什么给你吃吧~”  
+“那么，真由喜就做点什么给你吃吧~”  
 “呃？妈妈要做？会做吗？”  
 “真是的。连篝都这么说~但是呢，我最近可是有请由季教我做料理哦~”  
 “啊，那我也来帮帮忙吧——”  
@@ -68,7 +68,7 @@
 “不，不是说这个……地上，本来开了一个小洞的。”  
 “地上……有洞吗？”  
 LAB被袭击就在昨天晚上。那时候，射出的子弹的确在地板上打出了一个黑色小洞。  
-“应该有一个小洞吗？真由氏不觉得有呢……”  
+“应该有一个小洞吗？真由喜不觉得有呢……”  
 琉华子和真由理先后对洞的事表现得很茫然，也就是说——  
 “顺便问一下，你们昨天……怎么样？”  
 “昨天的派对吗？超级开心的呢~”  
