--- a/article/sg0/doc/0102.md
+++ b/article/sg0/doc/0102.md
@@ -58,15 +58,15 @@
 不是不相信雷斯吉宁教授，不过在亲眼确认数据真的没有被带出去之前，还是无法安心。耳听为虚眼见为实，真帆是这样认为的。而且，作为科学家，就应该这样。然而现在真帆并没有确认这点的权限。结果，真帆心中的阴霾依旧无法散去。虽然从一开始就知道会是这样，但是也实在无法做到不闻不问。  
 
 “啊啦？你们俩也在呢。”  
-和雷斯吉宁教授的对话正好告一段落，雷耶斯教授也来到了研究室。  
+和雷斯吉宁教授的对话正好告一段落，莱耶丝教授也来到了研究室。  
 “真是的，明明是难得的假日，真热爱工作呢。”  
-“雷耶斯教授你才是。”  
+“莱耶丝教授你才是。”  
 “因为我呆在酒店也没什么可干的。”  
 真帆和雷斯吉宁教授对视一眼，耸了耸肩。结果，科学家全都是这种生物。  
 “什么什么，什么意思啊？”  
 “*Hahaha——*”  
 “嘿嘿……没什么啦。”  
-看着雷耶斯教授不明所以的样子，真帆和雷斯吉宁教授一起笑了。  
+看着莱耶丝教授不明所以的样子，真帆和雷斯吉宁教授一起笑了。  
 但真帆心中的阴霾依然未能散开。  
 
 
