--- a/article/sg0/doc/0048.md
+++ b/article/sg0/doc/0048.md
@@ -53,7 +53,7 @@
 “我联系过菲莉丝碳和琉华氏了。两人都去避难了。”  
 “呼……”  
 “呐，冈伦……  
- 铃羽和真由氏……都联系不上……  
+ 铃羽和真由喜……都联系不上……  
  昨天的事件中，时间机器也被破坏得粉碎……  
  跟铃羽所说的未来比起来，世界变动得太快了啊……”  
 “………………”  
