--- a/article/sg0/doc/0050.md
+++ b/article/sg0/doc/0050.md
@@ -15,8 +15,8 @@
 长发的少女温柔地关心着我，我连忙表示没事。如果她们因为担心而去联系了真由理的话，之后还要费力去解释，我不想让真由理为没必要的事担心。真是一开始就不应该回秋叶原的，只是在街上走走就会碰到认识的人。刚刚从神社出来就应该向神田方向走的。  
 “冈伦总是看起来很痛苦的样子。”  
 “……是吗？”  
-“是的哦。看着那样的冈伦，真由氏也很痛苦的样子……  
- 我也是，看到冈伦和真由氏就会变得要哭出来一样……  
+“是的哦。看着那样的冈伦，真由喜也很痛苦的样子……  
+ 我也是，看到冈伦和真由喜就会变得要哭出来一样……  
  啊，我在说什么啊……”  
 短发少女属于外向开朗的类型，对我的称呼方式应该是照搬了真由理的。她说话的方式非常直球，身边的少女小声叫了她的名字想提醒她委婉些，她也依旧一口气地说了出来。看来这个叫作吹雪的女孩子非常重视真由理啊。明白了这一点，我的情绪变得温和起来。  
 “那个……冈伦喜欢的人，是谁啊？”  
