--- a/article/sg0/doc/0052.md
+++ b/article/sg0/doc/0052.md
@@ -93,7 +93,7 @@
 『呀，我在玩黄游，里面出现了这个选项  
  所以在想，如果是冈伦会选什么颜色』  
 「![](../img/emoji/okarin-ha.png)」  
-『呃，其实我最想问的是真由氏和琉华氏还有菲莉丝碳他们的想法』  
+『呃，其实我最想问的是真由喜和琉华氏还有菲莉丝碳他们的想法』  
 「她们会叫警察来抓你的」  
 『对吧  
  所以我无奈之下才来问冈伦你啊！！！  
