--- a/article/sg0/doc/0060.md
+++ b/article/sg0/doc/0060.md
@@ -152,7 +152,7 @@
 『遇到伯母了，晚饭拜托给我了~』  
 「![](../img/emoji/okarin-ha.png)」  
 『伯母被叫去商店街的会议了，正在烦恼晚饭该怎么办  
- 我说“由真由氏来做吧~”，伯母说“拜托了——”』  
+ 我说“由真由喜来做吧~”，伯母说“拜托了——”』  
 「没问题吗？真由理你也很忙吧，不要勉强」  
 『完全没问题哦~我会做很好吃的东西，你早点回来哦~♪』  
 「是么？真的？真没问题？」  
