人名修正：牧瀬 --> 牧濑

--- a/article/sg0/doc/0103.md
+++ b/article/sg0/doc/0103.md
@@ -51,7 +51,7 @@
 “不是很想要接受检查呢。小时候，就总是要接受检查。”  
 “是吗？”  
 “嗯，说是为了治疗PTSD。”  
-本人也没有意向要去检查。但是……如果这样下去，红莉栖的记忆流入增多的话，她会变成什么样呢？是变成“持有牧瀬红莉栖记忆”的“椎名篝”呢，还是会变成“牧瀬红莉栖”呢？”单纯记忆并不能形成人格。但记忆也是形成人格所需要素的一部分。拥有红莉栖记忆的她，会变成怎样的存在呢？现在大概没有人能知道答案，因为共享某人的记忆这种现象本身，恐怕至今为止都还未出现过。  
+本人也没有意向要去检查。但是……如果这样下去，红莉栖的记忆流入增多的话，她会变成什么样呢？是变成“持有牧濑红莉栖记忆”的“椎名篝”呢，还是会变成“牧濑红莉栖”呢？”单纯记忆并不能形成人格。但记忆也是形成人格所需要素的一部分。拥有红莉栖记忆的她，会变成怎样的存在呢？现在大概没有人能知道答案，因为共享某人的记忆这种现象本身，恐怕至今为止都还未出现过。  
 
 ![](../img/0103-2.png)
 
@@ -84,9 +84,9 @@
 “你就别戏弄我了。”  
 “哈哈，冈伦先生害羞了呢。”  
 完全陷入篝的节奏了。  
-“啊，从这种意义上来说，那位叫牧瀬红莉栖的人也是这样的呢。”  
+“啊，从这种意义上来说，那位叫牧濑红莉栖的人也是这样的呢。”  
 “红莉栖？”  
-“嗯，因为牧瀬红莉栖这个名字，也经常从妈妈或桶子叔叔口中听到。  
+“嗯，因为牧濑红莉栖这个名字，也经常从妈妈或桶子叔叔口中听到。  
  那么早就去世的人，还有这么大的影响力，她会是怎样的一个人呢？”  
 “那个……真由理是怎么评价红莉栖的？”  
 “……说是冈伦先生的重要的人。”  
