--- a/article/sg0/doc/0104.md
+++ b/article/sg0/doc/0104.md
@@ -132,7 +132,7 @@
 “啊，想这么糊弄过去，好狡猾！  
  但是……重要到改变人生的程度的人呢，好令人憧憬啊。”  
 如字面所示，不论过去还是未来，都因她发生了巨大的改变。  
-“呐，在冈伦先生看来，牧瀬红莉栖小姐是怎样的人呢？”  
+“呐，在冈伦先生看来，牧濑红莉栖小姐是怎样的人呢？”  
 “很在意吗？”  
 “我想更多地了解脑海中那些记忆的主人。”  
 “就算我不告诉你，这些记忆不也在你的脑海里吗？”  
@@ -141,7 +141,7 @@
  所以，想要知道那些更人性一点的事情，比如为人之类的。”  
 “……”  
 对于篝来说，红莉栖是完全没有接触过的陌生人。既然和陌生人共享了记忆，想要进一步了解对方也不无道理。  
-“那家伙……牧瀬红莉栖，总之是一个好奇心很强的家伙。”  
+“那家伙……牧濑红莉栖，总之是一个好奇心很强的家伙。”  
 “嗯嗯。”  
 “而且很固执，自己认为正确的事情，不管谁怎么说都绝对不会改变。”  
 “这样啊。”  
@@ -162,7 +162,7 @@
 “……”  
 “冈伦先生……？”  
 “啊，没事……”  
-篝脑中的红莉栖的记忆——如果，在大脑中完全重现的话——名为椎名篝的少女就会变成牧瀬红莉栖吗？我知道这是荒唐的想法。人格和记忆应该是不同的。即便如此，如果——如果，她的记忆都替换成红莉栖的记忆的话——如果那样的话——  
+篝脑中的红莉栖的记忆——如果，在大脑中完全重现的话——名为椎名篝的少女就会变成牧濑红莉栖吗？我知道这是荒唐的想法。人格和记忆应该是不同的。即便如此，如果——如果，她的记忆都替换成红莉栖的记忆的话——如果那样的话——  
 “冈伦……先生……”  
 “呃？”  
 篝摇晃着脚步向我走近，将她的身体靠在了我身上。因事出突然，我屏住了呼吸。胸口所触碰到的体温，触感，让我想起来红莉栖。  
