--- a/article/sg0/doc/0105.md
+++ b/article/sg0/doc/0105.md
@@ -46,7 +46,7 @@
 “冷静点篝！这不是你的记忆！”  
 听到这句话，篝恍惚地抬起了头。  
 “……冈伦……先生……”  
-“对。你是椎名篝，不是牧瀬红莉栖。”  
+“对。你是椎名篝，不是牧濑红莉栖。”  
 “篝……我是……椎名、篝……”  
 “唔……啊……！啊啊啊——————！！”  
 
@@ -65,7 +65,7 @@
 “虽然现在平静下来了，但刚刚有一段时间很混乱。”  
 “果然……是因为红莉栖的记忆？”  
 “啊。事到如今，应该没错了。”  
-虽然还不清楚为什么会这样，但是篝的脑海中确实有着牧瀬红莉栖的记忆。问题在于，这个问题应该怎么处理。单靠我们几个，能做到的很有限。就算竭尽全力，极限也就只是追查到事态为何会变成这个地步。只是这样，无法从根本上解决问题。我们的最终目的是，如何去除红莉栖的记忆，让篝能够恢复自己原本的记忆。为此需要专家的力量。从这个意义上说，比屋定真帆也是专家。至少在记忆和大脑机理的领域，没有像她那么值得信赖的人物了吧。但是有一个问题——还没告诉比屋定，篝是从未来穿越而来的这个事实。在这条世界线，比屋定还没和铃羽他们有那种程度的交流。当然，更不知道关于未来或者时间机器的事情。究竟应不应该告诉她这些呢？  
+虽然还不清楚为什么会这样，但是篝的脑海中确实有着牧濑红莉栖的记忆。问题在于，这个问题应该怎么处理。单靠我们几个，能做到的很有限。就算竭尽全力，极限也就只是追查到事态为何会变成这个地步。只是这样，无法从根本上解决问题。我们的最终目的是，如何去除红莉栖的记忆，让篝能够恢复自己原本的记忆。为此需要专家的力量。从这个意义上说，比屋定真帆也是专家。至少在记忆和大脑机理的领域，没有像她那么值得信赖的人物了吧。但是有一个问题——还没告诉比屋定，篝是从未来穿越而来的这个事实。在这条世界线，比屋定还没和铃羽他们有那种程度的交流。当然，更不知道关于未来或者时间机器的事情。究竟应不应该告诉她这些呢？  
 “话说，你们和篝小姐到底是怎么认识的呢？  
  到漆原先生那里之前，她到底在哪里、做什么的呢？”  
 “篝倒在了千叶县边境，那时候被救起来的。  
@@ -100,7 +100,7 @@
 “比屋定，铃羽最开始已经告诫过你，这不是在编故事也不是开玩笑。  
  铃羽和篝是从25年后的未来穿越回来的——通过时间机器。”  
 “时间机器？这种东西怎么可能造出——”  
-“那么如果我告诉你，创造了其理论基础的是牧瀬红莉栖呢？”  
+“那么如果我告诉你，创造了其理论基础的是牧濑红莉栖呢？”  
 “……”  
 一听到红莉栖的名字，比屋定脸上的愤怒就消失了。  
 “这样……吗…………我知道了，那就姑且听听。”  
