--- a/article/sg0/doc/0107.md
+++ b/article/sg0/doc/0107.md
@@ -1,6 +1,6 @@
 # 二律背反的双模 - 14
 > 1.053649  
-> [ 2011/01/06 真帆视角] 
+> [ 2011/01/06 真帆视角] 和光市办公室被侵入，但是没有丢失什么东西。雷斯吉宁套话得知真帆的笔记本在酒店。真帆请假，带着行李和红莉栖笔记本与硬盘准备常驻 LAB 研发时间跳跃装置。  
 
 （难以置信……）  
 （但这是真的呢！）  
