微调对真帆的称呼

--- a/article/sg0/doc/0105.md
+++ b/article/sg0/doc/0105.md
@@ -75,14 +75,14 @@
  小时候的她，又是在哪里、做什么的呢？”  
 “……”  
 铃羽无言地望向了我。她大概也是感觉，篝现在的状况她也有责任吧。她的脸上写着，“不论如何，都要让篝恢复原状”的决心。  
-“叔叔，怎么办？要和比屋定说吗？”  
+“叔叔，怎么办？要和比屋定小姐说吗？”  
 比屋定是科学家。把真相告诉她的话，她一定会对时间旅行感兴趣，很可能会着手技术开发。这是蕴含巨大危险的行为。但是——  
 “为了探究拯救篝的方法，不得不这么做了啊……”  
 考虑到最后，我点了点头。现在，首要的是必须想办法救篝。  
 
 铃羽用力地点头，回应了我的答复，然后面向比屋定。  
 “接下来要说的事情，只有非常少数的一部分人知情。  
- 所以，请比屋定务必不要透露给其他任何人。”  
+ 所以，请比屋定小姐务必不要透露给其他任何人。”  
 “怎、怎么了，突然间……”  
 比屋定感受到铃羽突然露出的如同杀气般的态度，显得有些畏缩。即使如此，铃羽继续说着。  
 “虽然听起来像，但这并不是开玩笑。能不能遵守这个约定，回答只能二选一。”  
