--- a/article/sg0/doc/0106.md
+++ b/article/sg0/doc/0106.md
@@ -5,7 +5,7 @@
 “首先，让我整理一下你说的这些……  
  也就是说，铃羽小姐和篝小姐，为了让冈部先生能够改变未来，而从 2036 年来到现在，是吗？”  
 “是的。”  
-比屋定将身体沉入沙发中，深深叹了口气。  
+真帆将身体沉入沙发中，深深叹了口气。  
 “我可不觉得冈部先生能做到这么了不起的事情。  
  区区一个人类，却寄托着全人类的命运……”  
 “我也觉得我做不到。”  
@@ -25,7 +25,7 @@
 “知道了。”  
 铃羽爽快地回答道。  
 “……谢谢。”  
-铃羽都说好了，我也没什么需要插嘴的。只要比屋定能来协助我们就够了。  
+铃羽都说好了，我也没什么需要插嘴的。只要真帆能来协助我们就够了。  
 
 “现在我们回到篝的话题吧。  
  如同之前所说，她和铃羽走散是在 10 岁的时候。  
@@ -35,7 +35,7 @@
 “冈伦叔叔的假说，是指她曾经待在维克多·孔多利亚大学吧？”  
 “嗯。然后，以某种形式接触了『Amadeus』。”  
 “……”  
-比屋定摆出一副既可说是认同又可说是想无奈的表情，深深地叹了口气。为了『Amadeus』项目而被保存的牧濑红莉栖的记忆数据——篝脑中存在的红莉栖的记忆来源，只可能是这份数据。证实这观点就是今天篝的言行。留学，演讲，她口中透露出的红莉栖的记忆片段，全都是在来日本之前就决定好了的事情。最后一次提取红莉栖的记忆数据，正是在她从美国出发前。这一点也和情况吻合。  
+真帆摆出一副既可说是认同又可说是想无奈的表情，深深地叹了口气。为了『Amadeus』项目而被保存的牧濑红莉栖的记忆数据——篝脑中存在的红莉栖的记忆来源，只可能是这份数据。证实这观点就是今天篝的言行。留学，演讲，她口中透露出的红莉栖的记忆片段，全都是在来日本之前就决定好了的事情。最后一次提取红莉栖的记忆数据，正是在她从美国出发前。这一点也和情况吻合。  
 “虽然之前和雷斯吉宁教授确认过了，  
  他说红莉栖的记忆数据一直被冻结着，应该没人能够访问到。  
  但是我还没有权限来确认他说的是不是事实。  
@@ -79,7 +79,7 @@
  红莉栖就将其实现了，应用了她所研究的理论。”  
 “嗯，是的，可行的。  
  而且，『Amadeus』本来就是为了这个目的被制造出来的。”  
-在医疗领域的应用……在研讨会上由比屋定翻译的雷斯吉宁教授的发言中，确实说过这方面的内容。在这条世界线……因为『Amadeus』被冻结了，所以那次研讨会也不存在了。比屋定重新说明了一遍，内容和研讨会上说的差不多。果然，记忆数据的移植，在理论上是可行的。  
+在医疗领域的应用……在研讨会上由真帆翻译的雷斯吉宁教授的发言中，确实说过这方面的内容。在这条世界线……因为『Amadeus』被冻结了，所以那次研讨会也不存在了。真帆重新说明了一遍，内容和研讨会上说的差不多。果然，记忆数据的移植，在理论上是可行的。  
 “红莉栖所发明的‘时间跳跃装置’，就是这项技术的应用。”  
 “当然，不管是哪一个，制造的目的都是‘把自己的记忆移植到自己的大脑中’……”  
 即使是这样，红莉栖也曾经说过这很危险。  
@@ -111,7 +111,7 @@
  就是用过去的篝小姐的记忆，再一次覆盖上去吧……”  
 “再一次把记忆……？”  
 “但是我觉得，操作篝小姐记忆的人，可能不会保留篝小姐的记忆。”  
-也许正如比屋定所说，将两份记忆装入同一个大脑中，会产生错误是理所当然的。这么说的话，对篝做的实验，出现了和本来预期目标不一样的结果——也就是失败了？  
+也许正如真帆所说，将两份记忆装入同一个大脑中，会产生错误是理所当然的。这么说的话，对篝做的实验，出现了和本来预期目标不一样的结果——也就是失败了？  
 “那么，把篝小姐的记忆用恰当的装置，再一次覆盖回去的话，或许就会回复原状了。”  
 “但是为此所需的篝的记忆数据我们却没有……”  
 “只能期待他们还留有备份了。”  
