修改标点符号

--- a/article/sg0/doc/0012.md
+++ b/article/sg0/doc/0012.md
@@ -113,7 +113,7 @@
 “啊！”（×2）  
 铃羽和桶子对视了一眼，只凭声音，两个人瞬间就知道了来的人是谁。  
 “快躲起来铃羽！”  
-“*Okey-dokey！*”  
+“*Okey-dokey!*”  
 铃羽的动作非常快，可能比刚才制服父亲还更快些。毫不发出任何响动，铃羽冲进了 LAB 最里面的开发室，帘子之后的狭小空间。差不多在铃羽钻到桌子底下的同时，LAB 的门被敲响了。  
 “你好~”  
 那个声音铃羽当然也很熟悉——果然是**母亲**。同时铃羽也能分辨得出，父亲已经手忙脚乱了。咚咚的敲门声继续响起。  
@@ -157,7 +157,7 @@
 “啊——我来拿好了！”  
 差点暴露而突然反应过来的桶子阻止了由季，连忙进入了开发室内。在拿地板上的吸尘器的时候，跟躲在桌子下的铃羽视线相交。  
 “（悄声）别暴露了啊，爸爸。”  
-“（悄声）*Okey-dokey！*”  
+“（悄声）*Okey-dokey!*”  
 “桥田君，吸尘器在里面吗？”  
 “啊……嗯，嗯！”  
 看起来由季应该是没有发现的样子，在房间里开始了打扫。确实在早上的时候，房间里就已经比较乱了，以由季的性格这时候忍不住要打扫对于铃羽来说是很容易猜到的。  
