--- a/article/sg0/doc/0063.md
+++ b/article/sg0/doc/0063.md
@@ -127,7 +127,7 @@
 “当然哟！你觉得呢，篝小姐？”  
 “好！”  
 “铃羽也尽量多去露露脸。这样对恢复记忆应该有好处。”  
-“*Okey-dokey！*”  
+“*Okey-dokey!*”  
 “对了！那个呢，因为没法办圣诞派对，于是我考虑办新年派对！要是篝也能来帮忙的话就好了呢~”  
 “诶？可以吗？我这种……”  
 “当然了哦！是吧，琉华君？”  
