--- a/article/sg0/doc/0017.md
+++ b/article/sg0/doc/0017.md
@@ -187,5 +187,5 @@
 > (to be continued)
 ---
 
-| [←prev](./0016) | [menu](../) | [next→不关机](./0018) |  
-|                 |                | [next→关机  ](./0050) |
+| [←prev](./0016) | [menu](../) | [next→接听电话](./0018) |  
+|                 |             | [next→关闭手机](./0050) |
