--- a/article/sg0/doc/0018.md
+++ b/article/sg0/doc/0018.md
@@ -1,6 +1,6 @@
 # 闭时曲线的碑文 - 13α
 > 1.129848  
-> [ 2010/12/15 ] 接 0017 - 不关机。与教授见面前，在秋叶原的天桥遇到了吹雪和枫。被问到喜欢的人时想起杀死红莉栖的场景而呕吐，然后逃走了。  
+> [ 2010/12/15 ] 接 0017 - 接听电话。与教授见面前，在秋叶原的天桥遇到了吹雪和枫。被问到喜欢的人时想起杀死红莉栖的场景而呕吐，然后逃走了。  
 
 手指颤抖着，一直无法做到按下关机键，反而是接起了电话。  
 “呼——……什么？”  
