--- a/article/sg0/doc/0050.md
+++ b/article/sg0/doc/0050.md
@@ -1,6 +1,6 @@
 # 闭时曲线的碑文 - 13β
 > 1.129848  
-> [ 2010/12/15 ] 接 0017 - 关机。与教授见面前，在秋叶原的天桥遇到了吹雪和枫。被问到喜欢的人时想起杀死红莉栖的场景而感到难受，随后疑似感觉跳线。  
+> [ 2010/12/15 ] 接 0017 - 关闭手机。与教授见面前，在秋叶原的天桥遇到了吹雪和枫。被问到喜欢的人时想起杀死红莉栖的场景而感到难受，随后疑似感觉跳线。  
 
 手机关机了。我慢慢站了起来。如果琉华子看到现在的我，大概又会担心吧，还是赶紧离开为好。虽然有些蹒跚，但还不至于走不动。  
 
